# default_plane

./: Cargo.toml  notes
assets/city/city_model/: license.txt  scene.gltf
assets/city/imaginary_city_i/: license.txt  scene.gltf
assets/city/san_francisco_city/: license.txt  scene.gltf
assets/city/tron_gothic_city/: license.txt  scene.gltf
assets/city/white_round_exhibition_gallery/: license.txt  scene.gltf
assets/default/level_02_-_vr_platform_game_on_sketchfab/: license.txt  scene.gltf
assets/default/nightclub_for_mozilla_hubs/: license.txt  scene.gltf
assets/default/sci_fi_level_design/: license.txt  scene.gltf
assets/nature/el_capitan/: license.txt  scene.gltf
assets/nature/green_island/: license.txt  scene.gltf
assets/nature/peak/: license.txt  scene.gltf
assets/nature/snowy_mountain_-_terrain/: license.txt  scene.gltf
assets/new/gallery_hallway/: license.txt  scene.gltf
assets/new/skullhome/: license.txt
assets/new/temple_church_round/: license.txt  scene.gltf
assets/new/throne_room/: license.txt
assets/oasis/gallery_round_flatfloor_baked/: license.txt  scene.gltf
assets/oasis/guelph_station_1/: license.txt  scene.gltf
assets/oasis/juggernaught_bridge_color/: license.txt  scene.gltf
assets/oasis/kleeblatt_quest_home_environment/: license.txt  scene.gltf
assets/oasis/minas_tirith_throne_room_test_v1/: license.txt  scene.gltf
assets/oasis/sci-fi_neon_model/: scene.gltf
assets/oasis/skullhome/: scene.gltf
assets/oasis/the_hunters_rest/: license.txt  scene.gltf
assets/oasis/throne_room/: scene.gltf
assets/sketchfab/ag_127-720-00/: license.txt  scene.gltf
assets/sketchfab/ajf-12_dvergr/: license.txt  scene.gltf
assets/sketchfab/akira/: license.txt  scene.gltf
assets/sketchfab/andromeda/: license.txt  scene.gltf
src/: bevy_gltf_setup.rs  camera.rs  camera_controller.rs  come_back_to.txt  cubemap_materials.rs  cubemap_setup.rs  details.txt  how_to.txt  ideas.txt  main.rs  notes.txt  todo.txt
src/backroll/: mod.rs  network_config.rs
src/box_game/: box_logic.rs  mod.rs
src/camera/: camera_controller.rs  dolly_free.rs  dolly_look_around.rs  follow_me.rs  mod.rs  pan_orbit.rs
src/cubemap/: cubemap_materials.rs  cubemap_setup.rs  mod.rs
src/ggrs_rollback/: ggrs_camera.rs  network.rs
src/gltf/: character.rs  fox.rs  imported.rs  mod.rs
src/math/: city_perlin.rs  grid.rs  mod.rs  random.rs
src/pcg_city/: buildings.rs  mod.rs  notes.txt  todo.txt
src/players/: create.rs  display.rs  info.rs  interact.rs  mod.rs  movement.rs
(+159 files in other folders)
