[package]
name = "default_plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
rand = "0.8.5"
noise = "0.7.0"
glam = "0.21.2"
bevy_dolly = {path = "./src/bevy_dolly-main"}
dolly = "0.3.1"
bevy_mod_picking = "0.7.0"
bevy_rapier3d = "0.15.0"

bevy_backroll = "0.4.0"
backroll_transport_udp = "0.4.0"
tracing-subscriber = "0.3.15"
bitflags = "1.2.1"
bytemuck = {version = "1.5.1", features = ["derive"]}

[profile.dev.package."*"]
opt-level = 3